# pybm

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pipapo.yaml  pyproject.toml  requirements.txt  setup.py
.github/: ci.yaml
.github/workflows/: ci.yaml
benchmarks/: sum.py
docs/: README.md  first-steps.md
docs/commands/: README.md  compare.md  config.md  create.md  delete.md  env.md  init.md  report.md  run.md  workspace.md
docs/components/: README.md  builder.md  provider.md  reporter.md  runner.md
examples/: README.md  sum-example.md
pybm/: __init__.py  __main__.py  benchmark.py  command.py  config.py  env_db.py  env_store.py  exceptions.py  git.py  git_utils.py  logging.py  main.py  mixins.py  parser.py  parsers.py  path_utils.py  run.py  specs.py  statuscodes.py  subprocessing.py  venv.py  venv_utils.py  virtualenv.py  workspace.py
pybm/builders/: __init__.py  base.py  builder.py  stdlib.py  util.py
pybm/commands/: __init__.py  apply.py  base.py  ci.py  compare.py  config.py  create.py  delete.py  destroy.py  env.py  help.py  init.py  report.py  run.py  switch.py  workspace.py
pybm/git/: util.py  worktree.py
pybm/io/: __init__.py  json.py  util.py
pybm/mixins/: filemanager.py  state.py
pybm/providers/: __init__.py  base.py  poetry.py  stdlib.py  util.py
pybm/reporters/: __init__.py  base.py  console.py  json.py  util.py
pybm/runners/: __init__.py  base.py  gbm.py  runner.py  stdlib.py  timeit.py  util.py
pybm/util/: common.py  extras.py  formatting.py  functions.py  git.py  imports.py  path.py  print.py  subprocess.py  venv.py  yaml.py
tests/: dispatch_test.py
