[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybm"
description = "A Python CLI for reproducible benchmarking in a git repository."
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["benchmark"]

authors = [
    {name = "Nicholas Junge"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]

dynamic = ["readme", "version"]

dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "pytest", "black", "isort", "ruff"]
gbm = ["google-benchmark"]

[project.scripts]
pybm = "pybm.main:main"

[project.urls]
Homepage = "https://github.com/nicholasjng/pybm"
Documentation = "https://github.com/nicholasjng/pybm/tree/master/docs"
Repository = "https://github.com/nicholasjng/pybm.git"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "pybm.__version__" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.mypy]
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "yaml.*"
]
ignore_missing_imports = true

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Same as Black.
line-length = 88